gcp-scale-before-20260912/firewalls.json
[
  {
    "allowed": [
      {
        "IPProtocol": "icmp"
      }
    ],
    "creationTimestamp": "2026-09-07T02:20:37.564-07:00",
    "description": "Allow ICMP from anywhere",
    "direction": "INGRESS",
    "disabled": false,
    "id": "6662802100955856650",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-icmp",
    "network": "https://www.googleapis.com/compute/v1/projects/project-0cc7c839-b9c7-4734-ad0/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/project-0cc7c839-b9c7-4734-ad0/global/firewalls/default-allow-icmp",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "0-65535"
        ]
      },
      {
        "IPProtocol": "udp",
        "ports": [
          "0-65535"
        ]
      },
      {
        "IPProtocol": "icmp"
      }
    ],
    "creationTimestamp": "2026-09-07T02:20:37.320-07:00",
    "description": "Allow internal traffic on the default network",
    "direction": "INGRESS",
    "disabled": false,
    "id": "2006944237969686282",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-internal",
    "network": "https://www.googleapis.com/compute/v1/projects/project-0cc7c839-b9c7-4734-ad0/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/project-0cc7c839-b9c7-4734-ad0/global/firewalls/default-allow-internal",
    "sourceRanges": [
      "10.128.0.0/9"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "3389"
        ]
      }
    ],
    "creationTimestamp": "2026-09-07T02:20:37.483-07:00",
    "description": "Allow RDP from anywhere",
    "direction": "INGRESS",
    "disabled": true,
    "id": "1473160995138649866",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-rdp",
    "network": "https://www.googleapis.com/compute/v1/projects/project-0cc7c839-b9c7-4734-ad0/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/project-0cc7c839-b9c7-4734-ad0/global/firewalls/default-allow-rdp",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "22"
        ]
      }
    ],
    "creationTimestamp": "2026-09-07T02:20:37.403-07:00",
    "description": "Allow SSH from anywhere",
    "direction": "INGRESS",
    "disabled": true,
    "id": "1781279140045078282",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-ssh",
    "network": "https://www.googleapis.com/compute/v1/projects/project-0cc7c839-b9c7-4734-ad0/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/project-0cc7c839-b9c7-4734-ad0/global/firewalls/default-allow-ssh",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "22"
        ]
      }
    ],
    "creationTimestamp": "2026-09-09T07:39:42.966-07:00",
    "description": "Administrative SSH only through Google Identity-Aware Proxy",
    "direction": "INGRESS",
    "disabled": false,
    "id": "582722877771272513",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "lekha-allow-iap-ssh",
    "network": "https://www.googleapis.com/compute/v1/projects/project-0cc7c839-b9c7-4734-ad0/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/project-0cc7c839-b9c7-4734-ad0/global/firewalls/lekha-allow-iap-ssh",
    "sourceRanges": [
      "35.235.240.0/20"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "8000"
        ]
      }
    ],
    "creationTimestamp": "2026-09-07T04:34:59.730-07:00",
    "description": "Temporary-staging-API-ingress-replace-with-HTTPS-before-cutover",
    "direction": "INGRESS",
    "disabled": true,
    "id": "6002277667459768204",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "lekha-api-staging-8000",
    "network": "https://www.googleapis.com/compute/v1/projects/project-0cc7c839-b9c7-4734-ad0/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/project-0cc7c839-b9c7-4734-ad0/global/firewalls/lekha-api-staging-8000",
    "sourceRanges": [
      "0.0.0.0/0"
    ],
    "targetTags": [
      "lekha-api"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "80"
        ]
      },
      {
        "IPProtocol": "tcp",
        "ports": [
          "443"
        ]
      },
      {
        "IPProtocol": "udp",
        "ports": [
          "443"
        ]
      }
    ],
    "creationTimestamp": "2026-09-07T10:04:38.232-07:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "7329406060659429450",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "lekha-api-staging-https",
    "network": "https://www.googleapis.com/compute/v1/projects/project-0cc7c839-b9c7-4734-ad0/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/project-0cc7c839-b9c7-4734-ad0/global/firewalls/lekha-api-staging-https",
    "sourceRanges": [
      "0.0.0.0/0"
    ],
    "targetTags": [
      "lekha-api"
    ]
  }
]
